<resources>
    <string name="app_name">Beetle Slayer</string>
    <string name="btn_start">Start game</string>
    <string name="game_name">Beetle Slayer</string>
    <string name="btn_exit">Exit</string>
    <string name="text_score">score</string>
    <string name="int_score">0</string>
    <string name="text_playername">Player</string>
    <string name="entername">Player</string>
    <string name="normal">Normal</string>
    <string name="nightmare">Nightmare</string>
    <string name="hell">Hell</string>
    <string name="difficulty">Difficulty</string>
</resources>
