<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/menu"
    tools:context=".Startmenu">

    <Button
        android:id="@+id/button"
        android:layout_width="125dp"
        android:layout_height="50dp"
        android:layout_marginTop="180dp"
        android:layout_marginBottom="420dp"
        android:background="@color/blacktransparent"
        android:fontFamily="@font/diablo"
        android:text="@string/btn_start"
        android:textColor="#E02431"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.584" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="480dp"
        android:layout_marginBottom="280dp"
        android:background="@color/blacktransparent"
        android:fontFamily="@font/diablo"
        android:text="@string/btn_exit"
        android:textColor="#E92828"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/diablo"
        android:text="@string/game_name"
        android:textColor="#CE1616"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.609" />

    <EditText
        android:id="@+id/entername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="99dp"
        android:layout_marginTop="117dp"
        android:layout_marginEnd="99dp"
        android:layout_marginBottom="123dp"
        android:ems="10"
        android:fontFamily="@font/diablo"
        android:inputType="textPersonName"
        android:text="@string/entername"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <ScrollView
        android:id="@+id/scrollview"
        style="@android:style/Widget.Material.Light.ScrollView"
        android:layout_width="239dp"
        android:layout_height="140dp"
        android:layout_marginTop="320dp"
        android:layout_marginBottom="343dp"
        android:scrollbarStyle="insideOverlay"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/normal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/blacktransparent"
                android:fontFamily="@font/diablo"
                android:text="@string/normal"
                android:textColor="#CE1616" />

            <Button
                android:id="@+id/nightmare"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/blacktransparent"
                android:fontFamily="@font/diablo"
                android:text="@string/nightmare"
                android:textColor="#CE1616" />

            <Button
                android:id="@+id/hell"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/blacktransparent"
                android:fontFamily="@font/diablo"
                android:text="@string/hell"
                android:textColor="#CE1616" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>